--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
   <header>
     <div class="container">
-      <div class="logo">Paradise</div>
+      <div class="logo">
+        <img src="assets/img/logo.png" alt="Logo Paradise" />
+      </div>
       <nav>
         <ul>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#musica">Música</a></li>
-          <li><a href="#shows">Shows</a></li>
+          <li><a href="#diferenciais">Diferenciais</a></li>
+          <li><a href="#galeria">Galeria</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
@@ -26,7 +28,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Paradise</h1>
-      <p>O Pop Rock que eleva suas emoções.</p>
+      <p>Um show autêntico com hits atemporais, energia elevada e performance única.</p>
       <div class="hero-buttons">
         <a href="https://www.youtube.com/@BandaParadise" target="_blank" class="btn">🎧 Ouça no YouTube</a>
         <a href="https://api.whatsapp.com/send/?phone=5516988223553" target="_blank" class="btn btn-outline">📱 Fale no WhatsApp</a>
@@ -36,39 +38,40 @@
 
   <section id="sobre" class="sobre">
     <div class="container">
-      <h2>Sobre a Banda</h2>
-      <p>Somos a Paradise, banda de Pop Rock que mistura energia, emoção e atitude. Nascemos para transformar cada show em uma experiência inesquecível.</p>
+      <h2>Sobre a Paradise</h2>
+      <p>Um show autêntico com hits atemporais de bandas como: Coldplay, Imagine Dragons, Marron 5, Bon Jovi, Bruno Mars, Harry Styles, entre outros, com novas nuances, ao lado também de músicas nacionais cuidadosamente escolhidas e com a releitura especial da Paradise.</p>
+      <p>Nossa história começa há 13 anos com o vocalista Di Carvalho. A proposta sempre foi fazer um show autêntico, diferente das outras bandas, tanto no repertório quanto na performance. Isso se fortaleceu com a entrada de Plínio Ruas há 7 anos e, posteriormente, Abner Reyde e Marcos Jessé, levando à realização de shows em eventos, confraternizações, casamentos e festivais expressivos na região de Ribeirão Preto.</p>
     </div>
   </section>
 
-  <section id="musica" class="musica">
+  <section id="diferenciais" class="diferenciais">
     <div class="container">
-      <h2>Ouça Nossas Músicas</h2>
-      <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLgJkz" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
-  </section>
-
-  <section id="shows" class="shows">
-    <div class="container">
-      <h2>Próximos Shows</h2>
-      <ul class="show-list">
-        <li><strong>25/03/2025:</strong> São Paulo - Audio Club</li>
-        <li><strong>10/04/2025:</strong> Rio de Janeiro - Circo Voador</li>
-        <li><strong>22/04/2025:</strong> Belo Horizonte - Mister Rock</li>
+      <h2>Diferenciais</h2>
+      <ul>
+        <li>🔥 Energia elevada e performance autêntica.</li>
+        <li>🎤 Interação com os convidados durante o show.</li>
+        <li>🎶 Repertório apurado e diferenciado, nacional e internacional.</li>
+        <li>🌟 Compromisso com qualidade, horário e organização do evento.</li>
       </ul>
+    </div>
+  </section>
+
+  <section id="galeria" class="galeria">
+    <div class="container">
+      <h2>Veja Nossa Energia no Palco</h2>
+      <div class="gallery-grid">
+        <img src="assets/img/foto-A.png" alt="Paradise Show 1" />
+        <img src="assets/img/foto-B.png" alt="Paradise Show 2" />
+      </div>
     </div>
   </section>
 
   <section id="contato" class="contato">
     <div class="container">
-      <h2>Fale Conosco</h2>
-      <p>Siga-nos nas redes sociais e entre em contato:</p>
-      <div class="social-icons">
-        <a href="https://www.instagram.com/aparadiseoficial/" target="_blank">Instagram</a>
-        <a href="https://api.whatsapp.com/send/?phone=5516988223553" target="_blank">WhatsApp</a>
-        <a href="https://www.youtube.com/@BandaParadise" target="_blank">YouTube</a>
+      <h2>Como marcamos seu evento?</h2>
+      <p>Nosso compromisso é oferecer uma experiência única e contribuir para que tudo saia perfeito. Sabemos como é importante esse momento para você. Vamos fazer isso acontecer JUNTOS!</p>
+      <div class="hero-buttons">
+        <a href="https://api.whatsapp.com/send/?phone=5516988223553" target="_blank" class="btn">📱 Fale Conosco Agora</a>
       </div>
     </div>
   </section>
@@ -79,6 +82,5 @@
     </div>
   </footer>
 
-  <script src="js/script.js"></script>
 </body>
 </html>
