--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="assets/img/logo.png" alt="Logo Paradise" />
+        <img src="assets/img/3 - LOGO_Paradise ROSA 2024.png" alt="Logo Paradise" />
       </div>
       <nav>
         <ul>
@@ -60,8 +60,8 @@
     <div class="container">
       <h2>Veja Nossa Energia no Palco</h2>
       <div class="gallery-grid">
-        <img src="assets/img/foto-A.png" alt="Paradise Show 1" />
-        <img src="assets/img/foto-B.png" alt="Paradise Show 2" />
+        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - A.png" alt="Paradise Show 1" />
+        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - B.png" alt="Paradise Show 2" />
       </div>
     </div>
   </section>
