--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2>Veja Nossa Energia no Palco</h2>
       <div class="gallery-grid">
         <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - A.png" alt="Paradise Show 1" />
-        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - B.png" alt="Paradise Show 2" />
+        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - B.jpg" alt="Paradise Show 2" />
       </div>
     </div>
   </section>
