--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container">
       <h2>Veja Nossa Energia no Palco</h2>
       <div class="gallery-grid">
-        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - A.png" alt="Paradise Show 1" />
-        <img src="assets/img/2 - FOTO PARADISE OFICIAL 2024 - B.jpg" alt="Paradise Show 2" />
+        <img src="assets/img/foto1.png" alt="Paradise Show 1" />
+        <img src="assets/img/foto2.jpg" alt="Paradise Show 2" />
       </div>
     </div>
   </section>
