--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="assets/img/3 - LOGO_Paradise ROSA 2024.png" alt="Logo Paradise" />
+        <img src="assets/img/logo.png" alt="Logo Paradise" />
       </div>
       <nav>
         <ul>
